--- a/Practica_0_Daniel/practica0.ipynb
+++ b/Practica_0_Daniel/practica0.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Enunciado del problema:\n",
+    "## Práctica 0 - Python\n",
+    "\n",
+    "### Miembros del grupo:\n",
+    "\n",
+    "- DANIEL DE ANDRÉS FERNÁNDEZ\n",
+    "- RICARDS LISKOVSKIS\n",
+    "\n",
+    "### Enunciado del problema:\n",
+    "\n",
     "Implementa en Python una función con la siguiente cabecera\n",
     "def integra_mc(fun, a, b, num_puntos=10000)\n",
     "que calcule la integral de fun entre a y b por el método de Monte Carlo antes descrito, generando\n",
@@ -110,14 +118,7 @@
     "#Comprobamos los valores de las \n",
     "print(integra_mc(fun))\n",
     "print(integra_mc_loop(fun))\n",
-    "print(scipy.integrate.quad(fun, 0, 2))\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "print(scipy.integrate.quad(fun, 0, 2))"
    ]
   },
   {
@@ -183,16 +184,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Conclusiones:\n",
+    "\n",
     "Como se puede observar en la gráfica el numero de puntos generados y el tiempo que tarda la función integra_mc_loop() es directamente proporcional, es deicr, a más puntos aleatorios generados para determinar la integral mayor será el tiempo que la función necesitará para acabar su ejecución, esto se debe a los siguientes factores:\n",
     "- Se usa un número considerable de llamadas a la función numpy.random.uniform() para generar puntos aleatorios, este número se ve directamente afectado por el incremento en el argumento num_puntos.\n",
     "- Cuenta con dos loops que si bien no están anidados suponen un peso grande para el tiempo de ejecución de la función, además de verse directamente afectados por el incremento del argumento num_puntos.\n",
@@ -203,13 +199,6 @@
     "\n",
     "Así podemos ver que el tamaño de los bucles esta directamente relacionado con el tamaño de ejecución del programa."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
