--- a/Practica_1_Daniel/practica_1_A.ipynb
+++ b/Practica_1_Daniel/practica_1_A.ipynb
@@ -294,6 +294,210 @@
     "\n",
     "titanic.reset_index()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es importante limpiar los datasets antes de utilizarlos porque los datos de mala calidad pueden afectar negativamente el análisis y la precisión de los modelos. Los valores nulos pueden generar errores en cálculos o modelos de machine learning, ya que muchas técnicas no pueden manejarlos adecuadamente. Por otro lado, los datos duplicados pueden sesgar los resultados y hacer que ciertos valores tengan un peso mayor del que deberían. Al eliminar valores nulos y duplicados, se mejora la calidad de los datos, garantizando análisis más confiables y modelos más precisos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Limpiamos los cambios hechos al dataset\n",
+    "titanic.reset_index(drop=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Antes de empezar, determina si hay algún atributo no nos va a resultar útil y por qué.\n",
+    "\n",
+    "***Respuesta***\n",
+    "Consideramos dos columnas como innecesarias para el dataset:\n",
+    "    . Ticket: almacena el número de ticket que tenía el pasajero, este no es relevante debido a que no tiene sentido compararlo con ningún otro valor.\n",
+    "    . Cabin: almacena el número de cabina de cada pasajero, no se considera un dato importante. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Relaciones entre atributos: dibuja diagramas de dispersión y calcula coeficientes de correlación. ¿Cuáles son los atributos que están más relacionados y qué podemos interpretar?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Para dibujar un diagrama de dispersión utilizaremos la función pandas.DataFrame.plot.scatter\n",
+    "titanic.plot.scatter(x = \"Pclass\", y = \"Fare\")\n",
+    "\n",
+    "#Para calcular los coeficientes de correlación utilizaremos la función pandas.DataFrame.corr\n",
+    "titanic.corr(numeric_only=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Atributos numéricos:\n",
+    "    a. Calcula media, desviación típica, valores mínimos, máximos, etc. de los atributos numéricos. Describe estos valores para cada variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic.mean(numeric_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic.std(numeric_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic.min(numeric_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic.max(numeric_only=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Atributos categóricos:\n",
+    "    a. Dibuja histogramas, diagramas de barras o de tartas para determinar las frecuencias de los valores de los atributos categóricos. Indica el número de valores distintos para cada atributo y el valor más frecuente para cada atributo. ¿Qué atributos están balanceados y cuáles no?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic.hist(figsize=(20,10), bins= 50)\n",
+    "titanic[\"Embarked\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como podemos ver en las gráficas de arriba los valores más balanceados son los de \"Age\" y \"PassengerID\" que representan la edad de los pasajeros y sus identifadores respectivamente, los que se encuentran más desbalanceados son \"Pclass\" y \"Survived\", que representan la clase en la que viajaban los pasajeros y aquellos que sobrevivieron al hundimiento respectivamente.\n",
+    "\n",
+    "Los valores máximos de cada atributo son los siguientes:\n",
+    "    **PassengerId**:\n",
+    "    **Survived**: 1.0\n",
+    "    **Pclass**: 1.00\n",
+    "    **Age**:  \n",
+    "    **SibSp**:\n",
+    "    **Parch**:\n",
+    "    **Fare**: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. Determina si hay outliers. Fíjate en las gráficas y descripciones que has empezado antes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Para poder sacar aquellos valores considerados \"outliers\" vamos a usar la libreria scipy.stats\n",
+    "from scipy import stats\n",
+    "\n",
+    "threshold_z = 2 #Vamos a poner que la diferencia del valor frente a la media no puede ser superior a dos.\n",
+    "\n",
+    "outlier_indices = np.where(np.abs(stats.zscore(titanic[\"PassengerId\"])) > threshold_z)[0]\n",
+    "no_outliers = titanic.drop(outlier_indices)\n",
+    "print(\"Original DataFrame Shape:\", titanic.shape)\n",
+    "print(\"DataFrame Shape after Removing Outliers:\", no_outliers.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. Convierte los atributos categóricos en valores numéricos usando OneHotEncoder (o getdummies) y LabelEnconder. Observa las diferencias y discute cuál sería la mejor opción cuando el dataset sea usado en un modelo de IA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder #OneHotEncoder all the way\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "onehot = OneHotEncoder(handle_unknown='ignore')\n",
+    "label = LabelEncoder()\n",
+    "\n",
+    "titanic_label = label.fit_transform(titanic.columns)\n",
+    "titanic_onehot = onehot.fit_transform(titanic)\n",
+    "\n",
+    "\n",
+    "print(titanic_label)\n",
+    "print(titanic_onehot)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import Normalizer, StandardScaler\n",
+    "\n",
+    "norm = Normalizer()\n",
+    "stand = StandardScaler()\n",
+    "\n",
+    "#titanic_norm = norm.fit_transform(titanic)\n",
+    "#titanic_stand = stand.fit_transform(titanic)\n",
+    "\n",
+    "print(titanic)"
+   ]
   }
  ],
  "metadata": {
@@ -312,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
