Comentarios y actualización practica 2

--- a/Practica_2_Daniel/Practica_2_A.ipynb
+++ b/Practica_2_Daniel/Practica_2_A.ipynb
@@ -57,8 +57,8 @@
     "y_pred = modelo.predict(x)\n",
     "\n",
     "# Mostrar resultados\n",
-    "print(\"Coeficientes:\", modelo.coef_)\n",
-    "print(\"Intercepto:\", modelo.intercept_)\n",
+    "print(\"Coeficiente:\", modelo.coef_)\n",
+    "print(\"Intercept:\", modelo.intercept_)\n",
     "\n",
     "# Gráfica\n",
     "plt.scatter(x, y, color='blue', label='Datos reales')\n",
@@ -67,6 +67,18 @@
     "plt.ylabel('Frecuencia Cardiaca (FC)')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como se puede comprobar la regresión lineal ofrece un modelo de predicción bastante fiable aunque no infalible, pero se ve muy afectado por los cambios repentinos de valores.\n",
+    "\n",
+    "***El coeficiente*** nos permiten obtener la pendiente de la recta ajustada, lo que indica cuánto varía la frecuencia cardíaca por cada unidad de tiempo.\n",
+    "***El valor intercept*** es el valor de la frequencia cardíaca en t0 (tiempo inicial 0).\n",
+    "\n",
+    "Es posible usar la variable **n_jobs** para mejorar la efectividad del problema cuando se trata con problemas que contengan muchos datos."
    ]
   }
  ],
