--- a/Practica_3_Daniel/practica_3_A.ipynb
+++ b/Practica_3_Daniel/practica_3_A.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "bat"
@@ -30,12 +30,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: scikit-learn in c:\\users\\danid\\anaconda3\\lib\\site-packages (1.5.1)\n",
-      "Requirement already satisfied: numpy>=1.19.5 in c:\\users\\danid\\anaconda3\\lib\\site-packages (from scikit-learn) (1.26.4)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in c:\\users\\danid\\anaconda3\\lib\\site-packages (from scikit-learn) (1.13.1)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\danid\\anaconda3\\lib\\site-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\danid\\anaconda3\\lib\\site-packages (from scikit-learn) (3.5.0)\n",
+      "Collecting scikit-learn\n",
+      "  Downloading scikit_learn-1.6.1-cp311-cp311-win_amd64.whl.metadata (15 kB)\n",
+      "Collecting numpy>=1.19.5 (from scikit-learn)\n",
+      "  Downloading numpy-2.2.4-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
+      "     ---------------------------------------- 0.0/60.8 kB ? eta -:--:--\n",
+      "     ------ --------------------------------- 10.2/60.8 kB ? eta -:--:--\n",
+      "     ------------------- ------------------ 30.7/60.8 kB 435.7 kB/s eta 0:00:01\n",
+      "     -------------------------------------- 60.8/60.8 kB 538.3 kB/s eta 0:00:00\n",
+      "Collecting scipy>=1.6.0 (from scikit-learn)\n",
+      "  Downloading scipy-1.15.2-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
+      "     ---------------------------------------- 0.0/60.8 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 60.8/60.8 kB 1.6 MB/s eta 0:00:00\n",
+      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
+      "  Downloading joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
+      "  Downloading threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
+      "Downloading scikit_learn-1.6.1-cp311-cp311-win_amd64.whl (11.1 MB)\n",
+      "   ---------------------------------------- 0.0/11.1 MB ? eta -:--:--\n",
+      "   ------------------ --------------------- 5.1/11.1 MB 109.2 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 9.0/11.1 MB 115.1 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  11.1/11.1 MB 108.8 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 11.1/11.1 MB 72.5 MB/s eta 0:00:00\n",
+      "Downloading joblib-1.4.2-py3-none-any.whl (301 kB)\n",
+      "   ---------------------------------------- 0.0/301.8 kB ? eta -:--:--\n",
+      "   --------------------------------------- 301.8/301.8 kB 18.2 MB/s eta 0:00:00\n",
+      "Downloading numpy-2.2.4-cp311-cp311-win_amd64.whl (12.9 MB)\n",
+      "   ---------------------------------------- 0.0/12.9 MB ? eta -:--:--\n",
+      "   ------------------ --------------------- 6.0/12.9 MB 127.7 MB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 9.5/12.9 MB 120.7 MB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 9.6/12.9 MB 77.1 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 9.7/12.9 MB 56.6 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 10.2/12.9 MB 43.3 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 11.8/12.9 MB 38.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.9/12.9 MB 36.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.9/12.9 MB 29.7 MB/s eta 0:00:00\n",
+      "Downloading scipy-1.15.2-cp311-cp311-win_amd64.whl (41.2 MB)\n",
+      "   ---------------------------------------- 0.0/41.2 MB ? eta -:--:--\n",
+      "   ---- ----------------------------------- 5.1/41.2 MB 108.1 MB/s eta 0:00:01\n",
+      "   ---------- ----------------------------- 10.6/41.2 MB 131.2 MB/s eta 0:00:01\n",
+      "   ------------- -------------------------- 13.5/41.2 MB 93.9 MB/s eta 0:00:01\n",
+      "   ------------------- -------------------- 19.7/41.2 MB 93.9 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 25.0/41.2 MB 108.8 MB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 30.8/41.2 MB 108.8 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 36.3/41.2 MB 108.8 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  41.2/41.2 MB 110.0 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  41.2/41.2 MB 110.0 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  41.2/41.2 MB 110.0 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  41.2/41.2 MB 110.0 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 41.2/41.2 MB 40.9 MB/s eta 0:00:00\n",
+      "Downloading threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: threadpoolctl, numpy, joblib, scipy, scikit-learn\n",
+      "Successfully installed joblib-1.4.2 numpy-2.2.4 scikit-learn-1.6.1 scipy-1.15.2 threadpoolctl-3.6.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.0.1\n",
+      "[notice] To update, run: C:\\Users\\danid\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -45,82 +101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Presion</th>\n",
-       "      <th>Colesterol</th>\n",
-       "      <th>BMI</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>179</td>\n",
-       "      <td>142</td>\n",
-       "      <td>18.173583</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>136</td>\n",
-       "      <td>166</td>\n",
-       "      <td>23.398463</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>162</td>\n",
-       "      <td>169</td>\n",
-       "      <td>19.924858</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>168</td>\n",
-       "      <td>241</td>\n",
-       "      <td>19.106995</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>172</td>\n",
-       "      <td>128</td>\n",
-       "      <td>28.696517</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Presion  Colesterol        BMI\n",
-       "0      179         142  18.173583\n",
-       "1      136         166  23.398463\n",
-       "2      162         169  19.924858\n",
-       "3      168         241  19.106995\n",
-       "4      172         128  28.696517"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'matplotlib'"
+     ]
     }
    ],
    "source": [
@@ -257,7 +250,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -271,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
