--- a/Proyecto_final/proyecto_final.ipynb
+++ b/Proyecto_final/proyecto_final.ipynb
@@ -5,7 +5,8 @@
    "id": "0dd5752a",
    "metadata": {},
    "source": [
-    "                                            ***PROYECTO FINAL***\n",
+    "***PROYECTO FINAL***\n",
+    "\n",
     "                                                    \n",
     "El desperdicio alimentario se ha convertido en una preocupación a nivel mundial, y éste es generado en distintas etapas a lo largo de toda la cadena alimentaria, desde la producción primaria hasta el consumo. Por lo tanto, abordar el problema requiere actuar en todas esas etapas, tanto en la prevención como en la reutilización de los que se generen de forma inevitable.\n",
     "\n",
@@ -25,8 +26,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb2c8695",
+   "metadata": {},
+   "source": [
+    "***Fases a terminar***:\n",
+    "\n",
+    "    - Definir bien que resultados consideramos útiles para resolver el problema.\n",
+    "    - Definir cuales de las columnas vamos a utilizar para solventar el problema.\n",
+    "    - Comparar normalización y stadardizacion.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3649cd6b",
    "metadata": {},
    "outputs": [],
@@ -76,7 +89,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
+   "id": "79d0862d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa5a3b39",
+   "metadata": {},
+   "source": [
+    "***Linear Regression***\n",
+    "\n",
+    "La regresión lineal es un modelo estadístico que busca establecer una relación lineal entre una variable dependiente (target) y una o más variables independientes (features), por este motivo es un modelo que se adapta muy bien a nuestro problema.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c06a036e",
    "metadata": {},
    "outputs": [
@@ -84,7 +117,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Regression Score: 0.9519058426640209\n"
+      "Linear Regression Score: 0.9519058426640209\n",
+      "Linear Regression R2 Score: 0.9525417157529962\n"
      ]
     }
    ],
@@ -98,13 +132,24 @@
     "#Entrenamos los modelos\n",
     "linear_model = linearregression.fit(x_train, y_train)\n",
     "score = cross_val_score(linear_model, x_test, y_test, cv=5, n_jobs=-1)\n",
+    "score_r2 = r2_score(y_test, linear_model.predict(x_test))\n",
     "\n",
-    "print(f'Linear Regression Score: {score.mean()}')"
+    "print(f'Linear Regression Score: {score.mean()}')\n",
+    "print(f'Linear Regression R2 Score: {score_r2}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4df5728",
+   "metadata": {},
+   "source": [
+    "***Multi-Layer Perceptron (regression)***\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "25138d48",
    "metadata": {},
    "outputs": [
@@ -112,24 +157,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MLP Regressor Score: 0.9531895103940793\n"
+      "MLP Regressor Score: 0.9531895103940793\n",
+      "MLP Regressor R2 Score: 0.9615911610129472\n"
      ]
     }
    ],
    "source": [
     "from sklearn.neural_network import MLPRegressor\n",
-    "\n",
     "mlpregressor = MLPRegressor(hidden_layer_sizes = 3 ,random_state=SEED, max_iter=1000)\n",
     "\n",
     "mlp_model = mlpregressor.fit(x_train, y_train)\n",
     "score = cross_val_score(mlp_model, x_test, y_test, cv=5, n_jobs=-1)\n",
     "\n",
-    "print(f'MLP Regressor Score: {score.mean()}')\n"
+    "print(f'MLP Regressor Score: {score.mean()}')\n",
+    "print(f'MLP Regressor R2 Score: {r2_score(y_test, mlp_model.predict(x_test))}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "da89badb",
    "metadata": {},
    "outputs": [
@@ -137,7 +183,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kneighbors Regressor Score: 0.8062787861702029\n"
+      "Kneighbors Regressor Score: 0.9526947250995088\n",
+      "Kneighbors Regressor R2 Score: 0.954772326977198\n"
      ]
     }
    ],
@@ -149,33 +196,55 @@
     "kneighbors_model = kneighbors.fit(x_train, y_train)\n",
     "score = cross_val_score(kneighbors_model, x_test, y_test, cv=5, n_jobs=-1)\n",
     "\n",
-    "print(f\"Kneighbors Regressor Score: {score.mean()}\")"
+    "print(f\"Kneighbors Regressor Score: {score.mean()}\")\n",
+    "print(f\"Kneighbors Regressor R2 Score: {r2_score(y_test, kneighbors_model.predict(x_test))}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "297dbd55",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn.regression'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[33], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mregression\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Ridge\n\u001b[0;32m      2\u001b[0m ridge \u001b[38;5;241m=\u001b[39m Ridge(alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m)    \n\u001b[0;32m      3\u001b[0m ridge_model \u001b[38;5;241m=\u001b[39m ridge\u001b[38;5;241m.\u001b[39mfit(x_train, y_train)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.regression'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ridge Regressor Score: 0.9519058568171074\n",
+      "Ridge Regressor R2 Score: 0.9525417209952705\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.Regression import Ridge\n",
-    "ridge = Ridge(alpha=0.5)    \n",
+    "from sklearn import linear_model\n",
+    "ridge = linear_model.Ridge(alpha=0.5)    \n",
     "ridge_model = ridge.fit(x_train, y_train)\n",
     "score = cross_val_score(ridge_model, x_test, y_test, cv=5, n_jobs=-1)\n",
-    "print(f'Ridge Regressor Score: {score.mean()}')"
+    "print(f'Ridge Regressor Score: {score.mean()}')\n",
+    "print(f'Ridge Regressor R2 Score: {r2_score(y_test, ridge_model.predict(x_test))}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "10b528fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lasso Regressor Score: 0.9519058750930656\n",
+      "Lasso Regressor R2 Score: 0.9525423494767569\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasso = linear_model.Lasso(alpha=0.5)\n",
+    "lasso_model = lasso.fit(x_train, y_train)\n",
+    "score = cross_val_score(lasso_model, x_test, y_test, cv=5, n_jobs=-1)  \n",
+    "print(f'Lasso Regressor Score: {score.mean()}')\n",
+    "print(f'Lasso Regressor R2 Score: {r2_score(y_test, lasso_model.predict(x_test))}')"
    ]
   },
   {
@@ -188,17 +257,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "d40e5940",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE Linear: 0.2215792278702846\n",
-      "RMSE MLP: 0.23930849614497632\n",
-      "RMSE KNeighbors: 0.39837052750446716\n"
+     "ename": "AttributeError",
+     "evalue": "module 'sklearn.linear_model' has no attribute 'predict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[45], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Vamos a evaluar un score más completo, para ello utilizaremos el Root Squared Error\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m root_mean_squared_error\n\u001b[1;32m----> 4\u001b[0m rmse_score_linear \u001b[38;5;241m=\u001b[39m root_mean_squared_error(y_test, linear_model\u001b[38;5;241m.\u001b[39mpredict(x_test))\n\u001b[0;32m      5\u001b[0m rmse_score_mlp \u001b[38;5;241m=\u001b[39m root_mean_squared_error(y_test, mlp_model\u001b[38;5;241m.\u001b[39mpredict(x_test))\n\u001b[0;32m      6\u001b[0m rmse_score_kneighbors \u001b[38;5;241m=\u001b[39m root_mean_squared_error(y_test, kneighbors_model\u001b[38;5;241m.\u001b[39mpredict(x_test))\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'sklearn.linear_model' has no attribute 'predict'"
      ]
     }
    ],
@@ -212,8 +283,8 @@
     "print(f'RMSE Linear: {rmse_score_linear}')\n",
     "print(f'RMSE MLP: {rmse_score_mlp}')\n",
     "print(f'RMSE KNeighbors: {rmse_score_kneighbors}')\n",
-    "\n",
-    "\n"
+    "print(f'RMSE Ridge: {root_mean_squared_error(y_test, ridge_model.predict(x_test))}')\n",
+    "print(f'RMSE Lasso: {root_mean_squared_error(y_test, lasso_model.predict(x_test))}')"
    ]
   },
   {
@@ -37405,7 +37476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
