--- a/Proyecto_final/proyecto_final.ipynb
+++ b/Proyecto_final/proyecto_final.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "3649cd6b",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "79d0862d",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c06a036e",
    "metadata": {},
    "outputs": [
@@ -139,12 +139,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f82d54c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Conda\\Lib\\site-packages\\sklearn\\gaussian_process\\kernels.py:452: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__k1__length_scale is close to the specified upper bound 100000.0. Increasing the bound and calling fit again may find a better value.\n",
+      "  warnings.warn(\n",
+      "d:\\Conda\\Lib\\site-packages\\sklearn\\gaussian_process\\kernels.py:452: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__k2__length_scale is close to the specified upper bound 100000.0. Increasing the bound and calling fit again may find a better value.\n",
+      "  warnings.warn(\n",
+      "d:\\Conda\\Lib\\site-packages\\sklearn\\gaussian_process\\kernels.py:452: ConvergenceWarning: The optimal value found for dimension 0 of parameter k2__noise_level is close to the specified upper bound 100000.0. Increasing the bound and calling fit again may find a better value.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Score: -2.5089302930469715\n",
+      "Logistic Regression crossval Score: -2.7489029026042\n",
+      "Logistic Regression R2 Score: -2.5089302930469715\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.gaussian_process.kernels import RBF, Matern, WhiteKernel\n",
+    "\n",
+    "kernel = RBF(length_scale=1000.0) + Matern(length_scale=1000.0, nu=1.5) + WhiteKernel(noise_level=1.0)\n",
+    "\n",
+    "gaussianregressor = GaussianProcessRegressor(kernel= kernel, n_restarts_optimizer=10, random_state=SEED)\n",
+    "gaussian_model = gaussianregressor.fit(x_train, y_train)\n",
+    "score = cross_val_score(gaussian_model, x_test, y_test, cv=5, n_jobs=-1)\n",
+    "\n",
+    "print(f'Logistic Regression Score: {gaussian_model.score(x_test, y_test)}')\n",
+    "print(f'Logistic Regression crossval Score: {score.mean()}')\n",
+    "print(f'Logistic Regression R2 Score: {r2_score(y_test, gaussian_model.predict(x_test))}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f4df5728",
    "metadata": {},
    "source": [
     "***Multi-Layer Perceptron (regression)***\n",
-    "\n"
+    "\n",
+    "El Perceptrón multicapa a diferencia del perceptrón estándar este estilo de perceptrón es capaz de resolver problemas más complejos o que son linealmente separables, el MLP es útil en este caso porque puede aprender patrones complejos en los datos de desperdicio alimentario y predecir valores continuos, como el total de desperdicio en toneladas o el gasto económico."
    ]
   },
   {
